--- a/index.html
+++ b/index.html
@@ -199,19 +199,19 @@
   <div class="container-fluid">
   <div class="row">
     <div class="col-sm-3">
-      <video src="./assets/1.mp4" controls autoplay loop poster="posterimage.jpg" width="100%">
+      <video src="./assets/1.mp4" controls  loop poster="posterimage.jpg" width="100%">
         Tu navegador no admite el elemento <code>video</code>.
       </video>
   </div>
     <div class="col-sm-3">
-      <video src="./assets/1.mp4" controls autoplay loop poster="posterimage.jpg" width="100%">
+      <video src="./assets/1.mp4" controls  loop poster="posterimage.jpg" width="100%">
     </div>
      
     <div class="col-sm-3">
-      <video src="./assets/1.mp4" controls autoplay loop poster="posterimage.jpg" width="100%"></video>
+      <video src="./assets/1.mp4" controls  loop poster="posterimage.jpg" width="100%"></video>
       </div>
       <div class="col-sm-3">
-        <video src="./assets/1.mp4" controls autoplay loop poster="posterimage.jpg" width="100%">
+        <video src="./assets/1.mp4" controls  loop poster="posterimage.jpg" width="100%">
         </div>
     </div>
   </div>
