--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 <div class="preloader flex-column justify-content-center align-items-center">
 <img class="animation__shake" src="./assets/aeonlogo.png" alt="AdminLTELogo" height="600px" width="350px">
-<h4> BIENVENIDOS A AEON MEX </h4>
+<h4> BIENVENIDOS A AEON MERX </h4>
 </div>
 
 <nav class="main-header navbar navbar-expand" style="background-color: rgb(131, 184, 131);">
@@ -99,20 +99,20 @@
 </a>
 <ul class="nav nav-treeview">
 <li class="nav-item">
-<a href="pages/layout/top-nav.html" class="nav-link">
+<a href="./aritmetica.html" class="nav-link">
 
 <p class="pa">∛ ARITMÉTICA</p>
 </a>
 </li>
 <li class="nav-item">
-<a href="pages/layout/top-nav-sidebar.html" class="nav-link">
+<a href="./algebra.html" class="nav-link">
 
 <p class="pa">྅ ALGEBRA</p>
 </a>
 </li>
 
 <li class="nav-item">
-<a href="pages/layout/fixed-sidebar.html" class="nav-link">
+<a href="./calculo.html" class="nav-link">
 
 <p class="pa">⅀ CÁLCULO</p>
 </a>
@@ -132,7 +132,7 @@
 </a>
 <ul class="nav nav-treeview">
 <li class="nav-item">
-<a href="pages/charts/chartjs.html" class="nav-link">
+<a href="./html.html" class="nav-link">
 <p class="pa">💻 HTML</p>
 </a>
 </li>
@@ -148,12 +148,12 @@
   </a>
   <ul class="nav nav-treeview">
   <li class="nav-item">
-  <a href="pages/charts/chartjs.html" class="nav-link">
+  <a href="./macroeconomia.html" class="nav-link">
   <p class="pa">🏦 MACROECONOMÍA</p>
   </a>
   </li>
   <li class="nav-item">
-    <a href="pages/charts/chartjs.html" class="nav-link">
+    <a href="./microeconomia.html" class="nav-link">
     <p class="pa">💳 MICROECONOMÍA</p>
     </a>
     </li>
