--- a/algebra.html
+++ b/algebra.html
@@ -99,13 +99,13 @@
 </a>
 <ul class="nav nav-treeview">
 <li class="nav-item">
-<a href="pages/layout/top-nav.html" class="nav-link">
+<a href="./aritmetica.html" class="nav-link">
 
 <p class="pa">∛ ARITMÉTICA</p>
 </a>
 </li>
 <li class="nav-item">
-<a href="./aitmetica.html" class="nav-link">
+<a href="./algebra.html" class="nav-link">
 
 <p class="pa">྅ ALGEBRA</p>
 </a>
