--- a/index.html
+++ b/index.html
@@ -160,6 +160,48 @@
   
   </ul>
   </li>
+  <li class="nav-item">
+  <a href="#" class="nav-link">
+  
+  <p class="pa">
+    💸 HISTORIA
+  </p>
+  </a>
+  <ul class="nav nav-treeview">
+  <li class="nav-item">
+  <a href="./historiadecolombia.html" class="nav-link">
+  <p class="pa">➮ HISTORIA DE COLOMBIA</p>
+  </a>
+  </li>
+  <li class="nav-item">
+    <a href="./historiadelmundo.html" class="nav-link">
+    <p class="pa">🦅 HISTORIA DEL MUNDO</p>
+    </a>
+    </li>
+  
+  </ul>
+  </li>
+  <li class="nav-item">
+  <a href="#" class="nav-link">
+  
+  <p class="pa">
+     ⚚LENGUAS 
+  </p>
+  </a>
+  <ul class="nav nav-treeview">
+  <li class="nav-item">
+  <a href="./lenguasclasicas.html" class="nav-link">
+  <p class="pa"> ✠ LENGUAS CLÁSICAS</p>
+  </a>
+  </li>
+  <li class="nav-item">
+    <a href="./colombiaesindigena.html" class="nav-link">
+    <p class="pa"> ⛰ LENGUAS INDÍGENAS</p>
+    </a>
+    </li>
+  
+  </ul>
+  </li>
 </nav>
 
 </div>
