--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
   <a href="#" class="nav-link">
   
   <p class="pa">
-    💸 HISTORIA
+    🕌 HISTORIA
   </p>
   </a>
   <ul class="nav nav-treeview">
   <li class="nav-item">
   <a href="./historiadecolombia.html" class="nav-link">
-  <p class="pa">➮ HISTORIA DE COLOMBIA</p>
+  <p class="pa">❊ HISTORIA DE COLOMBIA</p>
   </a>
   </li>
   <li class="nav-item">
