--- a/lenguasclasicas.html
+++ b/lenguasclasicas.html
@@ -71,7 +71,7 @@
 
 <aside class="main-sidebar  elevation-4" style="background-color: rgb(160, 201, 165);">
 
-<a href="index3.html" class="brand-link">
+<a href="https://aeon-merx.github.io/AEON-MERX/" class="brand-link">
 <img src="./assets/aeonlogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
 <span class="brand-text font-weight-light" style="font-size: 140%;">AEON MERX</span>
 </a>
