--- a/lenguasclasicas.html
+++ b/lenguasclasicas.html
@@ -254,7 +254,7 @@
   </section>
   <br>
   <br>
-  <h1>⚂ 🎧 AUDIOS</h1>
+  <h1>⚂ 🎧 SOFTWARE</h1>
     <section class="latinmodulo">
     <div class="container>
   <h1 id="CABEZERA">MODULO DE APRENDIZAJE DE LATIN CLÁSICO</h1>           
@@ -345,6 +345,38 @@
                                                                                                                                          
 </div>
 </section>
+                           <h1>⚂ 4. 🎧 AUDIOS</h1>
+  <section class="audios">
+    <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-3">
+        <audio controls>
+          <source src="./assets/tablas.mp3" type="audio/mp3" width="100%">
+              Tu navegador no soporta audio HTML5.
+      </audio>
+    </div>
+      <div class="col-sm-3">
+        <audio controls>
+          <source src="./assets/tablas.mp3" type="audio/mp3" width="100%">
+              Tu navegador no soporta audio HTML5.
+      </audio>
+      </div>
+       
+      <div class="col-sm-3">
+        <audio controls>
+          <source src="./assets/tablas.mp3" type="audio/mp3" width="100%">
+              Tu navegador no soporta audio HTML5.
+      </audio>
+        </div>
+        <div class="col-sm-3">
+          <audio controls>
+            <source src="./assets/tablas.mp3" type="audio/mp3" width="100%">
+                Tu navegador no soporta audio HTML5.
+        </audio>
+          </div>
+      </div>
+    </div>
+    </section>
 
 <footer class="main-footer" style="text-align: center !important;">
 <strong >Copyright &copy; 2022 <a href="https://aeon-merx.github.io/AEON-MERX/">☯AEON MERX</a>.</strong>
