--- a/lenguasclasicas.html
+++ b/lenguasclasicas.html
@@ -254,7 +254,7 @@
   </section>
   <br>
   <br>
-  <h1>⚂ 🎧 SOFTWARE</h1>
+  <h1>⚂ 💻 SOFTWARE</h1>
     <section class="latinmodulo">
     <div class="container>
   <h1 id="CABEZERA">MODULO DE APRENDIZAJE DE LATIN CLÁSICO</h1>           
@@ -345,7 +345,7 @@
                                                                                                                                          
 </div>
 </section>
-                           <h1>⚂ 4. 🎧 AUDIOS</h1>
+                           <h1> ⚃ 🎧 AUDIOS</h1>
   <section class="audios">
     <div class="container-fluid">
     <div class="row">
