--- a/algebra.html
+++ b/algebra.html
@@ -56,10 +56,10 @@
 <a class="nav-link "data-widget="pushmenu" href="#" role="button" id="menup">  ≣  </a> 
 </ul>
 <ul class="navbar-nav">
-  <a class="nav-link  href="index.html" role="button" style="font-size: 150% ;"> DUDAS📖  </a> 
+  <a class="nav-link"  href="index.html" role="button" style="font-size: 150% ;"> DUDAS 📖  </a> 
   </ul>
   <ul class="navbar-nav">
-    <a class="nav-link  href="https://aeon-merx.github.io/AEON-MERX/" role="button" style="font-size: 150% ;">  SALIR📖  </a> 
+    <a class="nav-link"  href="https://aeon-merx.github.io/AEON-MERX/" role="button" style="font-size: 150% ;">  SALIR📖  </a> 
     </ul>
    
 
