--- a/calculo.html
+++ b/calculo.html
@@ -53,13 +53,13 @@
 <nav class="main-header navbar navbar-expand" style="background-color: rgb(131, 184, 131);">
 
 <ul class="navbar-nav">
-<a class="nav-link "data-widget="pushmenu" href="#" role="button" id="menup">  ≣  </a> 
+<a class="nav-link" "data-widget="pushmenu" href="#" role="button" id="menup">  ≣  </a> 
 </ul>
 <ul class="navbar-nav">
-  <a class="nav-link  href="index.html" role="button" style="font-size: 150% ;"> DUDAS📖  </a> 
+  <a class="nav-link"  href="index.html" role="button" style="font-size: 150% ;"> DUDAS📖  </a> 
   </ul>
   <ul class="navbar-nav">
-    <a class="nav-link  href="https://aeon-merx.github.io/AEON-MERX/" role="button" style="font-size: 150% ;">  SALIR📖  </a> 
+    <a class="nav-link"  href="https://aeon-merx.github.io/AEON-MERX/" role="button" style="font-size: 150% ;">  SALIR📖  </a> 
     </ul>
    
 
