--- a/calculo.html
+++ b/calculo.html
@@ -53,7 +53,7 @@
 <nav class="main-header navbar navbar-expand" style="background-color: rgb(131, 184, 131);">
 
 <ul class="navbar-nav">
-<a class="nav-link" "data-widget="pushmenu" href="#" role="button" id="menup">  ≣  </a> 
+<a class="nav-link "data-widget="pushmenu" href="#" role="button" id="menup">  ≣  </a> 
 </ul>
 <ul class="navbar-nav">
   <a class="nav-link"  href="index.html" role="button" style="font-size: 150% ;"> DUDAS📖  </a> 
