--- a/lenguasclasicas.html
+++ b/lenguasclasicas.html
@@ -58,10 +58,10 @@
 <a class="nav-link "data-widget="pushmenu" href="#" role="button" id="menup">  ≣  </a> 
 </ul>
 <ul class="navbar-nav">
-  <a class="nav-link  href="index.html" role="button" style="font-size: 150% ;"> DUDAS📖  </a> 
+  <a class="nav-link"  href="index.html" role="button" style="font-size: 150% ;"> DUDAS📖  </a> 
   </ul>
   <ul class="navbar-nav">
-    <a class="nav-link  href="https://aeon-merx.github.io/AEON-MERX/" role="button" style="font-size: 150% ;">  SALIR📖  </a> 
+    <a class="nav-link"  href="https://aeon-merx.github.io/AEON-MERX/" role="button" style="font-size: 150% ;">  SALIR📖  </a> 
     </ul>
    
 
@@ -347,7 +347,7 @@
 </section>
                            <h1> ⚃ 🎧 AUDIOS</h1>
   <section class="audios">
-    <div class="container-fluid">
+    <div class="container">
     <div class="row">
       <div class="col-sm-3">
         <audio controls>
