--- a/index.html
+++ b/index.html
@@ -56,9 +56,6 @@
 <ul class="navbar-nav">
 <a class="nav-link "data-widget="pushmenu" href="#" role="button" id="menup">  ≣  </a> 
 </ul>
-<ul class="navbar-nav">
-  <a class="nav-link"  href="index.html" role="button" style="font-size: 150% ;"> DUDAS📖  </a> 
-  </ul>
   <ul class="navbar-nav">
     <a class="nav-link " href="https://aeon-merx.github.io/AEON-MERX/" role="button" style="font-size: 150% ;">  SALIR📖  </a> 
     </ul>
@@ -212,13 +209,20 @@
   animation-name: condor;
   animation-duration: 4s;
 }
-
 @keyframes condor {
-  0%   {background-color:red; left:0px; top:0px;}
-  25%  {background-color:yellow; left:200px; top:0px;}
-  50%  {background-color:blue; left:200px; top:200px;}
-  75%  {background-color:green; left:0px; top:200px;}
-  100% {background-color:red; left:0px; top:0px;}
+  0%   { 
+ left:0px; top:0px;
+ }
+  25%  {
+ left:200px; top:0px;
+ }
+  50%  { 
+ left:200px; top:200px;
+ }
+  75%  { 
+ left:0px; top:200px;
+ }
+  100% { left:0px; top:0px;}
 }
 
 </div>
