--- a/index.html
+++ b/index.html
@@ -35,24 +35,23 @@
   width: 222px;
   height: 222px;
   position: relative;
-  left: 25% ;
   animation-name: condor;
   animation-duration: 4s;
 }
 @keyframes condor {
   0%   { 
- left:0px; top:0px;
+ left:300px; top:0px;
  }
   25%  {
- left:200px; top:0px;
+ left:500px; top:0px;
  }
   50%  { 
- left:200px; top:200px;
+ left:300px; top:200px;
  }
   75%  { 
- left:0px; top:200px;
+ left:500px; top:200px;
  }
-  100% { left:0px; top:0px;}
+  100% { left:50%; bottom:0px;}
 }
 
 </style>
