--- a/index.html
+++ b/index.html
@@ -32,24 +32,24 @@
     padding: 0% !important;
   }
           .condor{
-  width: 222px;
-  height: 222px;
-  position: relative;
+  width: 333px;
+  height: 333px;
+  position: absolute;
   animation-name: condor;
-  animation-duration: 4s;
+  animation-duration: 6s;
 }
 @keyframes condor {
   0%   { 
- left:300px; top:0px;
+ left:0px; top:0px;
  }
   25%  {
  left:500px; top:0px;
  }
   50%  { 
- left:300px; top:200px;
+ left:500px; top:500px;
  }
   75%  { 
- left:500px; top:200px;
+ left:0px; top:500px;
  }
   100% { left:50%; bottom:0px;}
 }
