--- a/index.html
+++ b/index.html
@@ -35,24 +35,29 @@
   width: 333px;
   height: 333px;
   position: absolute;
+           right: 0px;
+           top : 0px;
   animation-name: condor;
   animation-duration: 6s;
 }
 @keyframes condor {
   0%   { 
- left:0px; top:0px;
+ right:0px; top:0px;
  }
   25%  {
- left:500px; top:0px;
+ left:80%; top:0px;
  }
   50%  { 
- left:500px; top:500px;
+ left:50%; top:500px;
  }
   75%  { 
- left:0px; top:500px;
+ left: 20%; top:500px;
  }
-  100% { left:50%; bottom:0px;}
+  90% { left:5%; bottom:0px;}
 }
+ 100% { display: none;
+ }
+ 
 
 </style>
 
