--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     padding: 0% !important;
   }
           .condor{
-  width: 333px;
-  height: 333px;
+  width: 222px;
+  height: 222px;
   position: absolute;
            right: 0px;
            top : 0px;
@@ -55,7 +55,7 @@
  }
   90% { left:5%; bottom:0px;}
 }
- 100% { display: none;
+ 100% { display: none;}
  }
  
 
