--- a/index.html
+++ b/index.html
@@ -37,25 +37,25 @@
   position: absolute;
            right: 0px;
            top : 0px;
+           display: none;
   animation-name: condor;
   animation-duration: 6s;
 }
 @keyframes condor {
   0%   { 
- right:0px; top:0px;
+ right:0px; top:0px; display: flex;
  }
   25%  {
- left:80%; top:0px;
+ left:80%; top:0px; display: flex;
  }
   50%  { 
- left:50%; top:500px;
+ left:50%; top:500px; display: flex;
  }
   75%  { 
- left: 20%; top:500px;
+ left: 20%; top:500px; display: flex;
  }
-  90% { left:5%; bottom:0px;}
+  90% { left:5%; bottom:0px;} display: flex;
 }
- 100% { display: none;}
  }
  
 
