--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   75%  { 
  left: 20%; top:500px; display: flex;
  }
-  90% { left:5%; bottom:0px;} display: flex;
+  90% { left:5%; bottom:0px; display: flex} ;
 }
  }
  
