--- a/index.html
+++ b/index.html
@@ -34,27 +34,27 @@
           .condor{
   width: 222px;
   height: 222px;
-  position: absolute;
+  position: relative ;
            right: 0px;
            top : 0px;
-           display: none;
+         display: flex ;
   animation-name: condor;
   animation-duration: 6s;
 }
 @keyframes condor {
   0%   { 
- right:0px; top:0px; display: flex;
+ right:0px; top:0px; 
  }
   25%  {
- left:80%; top:0px; display: flex;
+ left:80%; top:0px; 
  }
   50%  { 
- left:50%; top:500px; display: flex;
+ left:50%; top:500px; 
  }
   75%  { 
- left: 20%; top:500px; display: flex;
+ left: 20%; top:500px; 
  }
-  90% { left:5%; bottom:0px; display: flex} ;
+  90% { left:5%; bottom:0px; display: none} ;
 }
  }
  
