--- a/index.html
+++ b/index.html
@@ -37,25 +37,26 @@
   position: relative ;
            right: 0px;
            top : 0px;
-         display: flex ;
+       opacity: 0;
   animation-name: condor;
   animation-duration: 6s;
 }
 @keyframes condor {
   0%   { 
- right:0px; top:0px; 
+ right:0px; top:0px; opacity: 1;
  }
   25%  {
- left:80%; top:0px; 
+ left:80%; top:0px;  opacity: 1;
  }
   50%  { 
- left:50%; top:500px; 
+ left:50%; top:500px;  opacity: 1;
  }
   75%  { 
- left: 20%; top:500px; 
+ left: 20%; top:500px;  opacity: 1;
  }
-  90% { left:5%; bottom:0px; display: none} ;
-}
+ 90% {
+  left:5%; bottom:0px;  opacity: 1;
+ } ;
  }
  
 
