--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
 }
 @keyframes condor {
   0%   { 
- right:0px; top:0px; opacity: 1;
+ right:0px; top:0%; opacity: 1;
  }
   25%  {
- left:80%; top:0px;  opacity: 1;
+ left:80%; top:0%;  opacity: 1;
  }
   50%  { 
- left:50%; top:500px;  opacity: 1;
+ left:50%; top:30%;  opacity: 1;
  }
   75%  { 
- left: 20%; top:500px;  opacity: 1;
+ left: 20%; top:66%;  opacity: 1;
  }
  90% {
-  left:5%; bottom:0px;  opacity: 1;
+  left:5%; bottom:1%;  opacity: 1;
  } ;
  }
  
