--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
 </aside>
 
-<div class="content-wrapper" style="background-image: url('paisaje.jpg') !important ; color: white;">
+<div class="content-wrapper" style="background-image: url('paisaje.jpg') !important ; background-repeat: repeat-x; color: white;">
 
 <h1 style="text-align: center;"> CONTENIDO</h1>
 <img src="condor.png"  class="condor">
