--- a/index.html
+++ b/index.html
@@ -58,6 +58,23 @@
   left:5%; bottom:1%;  opacity: 1;
  } ;
  }
+        #popups{
+  width: 333px;
+  height: 333px;
+         background-color: white;
+         color: black;
+       opacity: 0;
+  animation-name: popUps;
+  animation-duration: 12s;
+}
+@keyframes popUps {
+  0%   { 
+  opacity: 0;
+ }
+ 100%{
+  opacity: 1:
+ } ;
+ }
  
 
 </style>
@@ -231,7 +248,32 @@
 
 <h1 style="text-align: center;"> CONTENIDO</h1>
 <img src="condor.png"  class="condor">
- 
+ <section id= popups>
+ <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+ </section>
 </div>
 
 
