--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  }
  90% {
   left:5%; bottom:1%;  opacity: 1;
- } ;
+ } 
  }
         #popups{
   width: 333px;
@@ -72,8 +72,8 @@
   opacity: 0;
  }
  100%{
-  opacity: 1:
- } ;
+  opacity: 1;
+ } 
  }
  
 
