--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
  } 
  }
         #popups{
-  width: 333px;
+  width: 100%;
   height: 333px;
          background-color: white;
          color: black;
-       opacity: 0;
+       opacity: 1;
   animation-name: popUps;
-  animation-duration: 12s;
+  animation-duration: 13s;
 }
 @keyframes popUps {
   0%   { 
