--- a/calculo.html
+++ b/calculo.html
@@ -140,7 +140,7 @@
   </a>
   <ul class="nav nav-treeview">
   <li class="nav-item">
-  <a href="./economia.html" class="nav-link">
+  <a href="https://aeon-merx.github.io/NI-OS/macroeconomia.html" class="nav-link">
   <p class="pa">🏦 MACROECONOMÍA</p>
   </a>
   </li>
