--- a/aritmetica.html
+++ b/aritmetica.html
@@ -145,7 +145,7 @@
   </a>
   </li>
   <li class="nav-item">
-    <a href="./microeconomía.html" class="nav-link">
+    <a href="https://aeon-merx.github.io/NI-OS/microeconomia.html" class="nav-link">
     <p class="pa">💳 MICROECONOMÍA</p>
     </a>
     </li>
