--- a/colombiaesindigena.html
+++ b/colombiaesindigena.html
@@ -56,7 +56,7 @@
 <a class="nav-link "data-widget="pushmenu" href="#" role="button" id="menup">  ≣  </a> 
 </ul>
 <ul class="navbar-nav">
-  <a class="nav-link"  href="index.html" role="button" style="font-size: 150% ;"> DUDAS📖  </a> 
+  <a class="nav-link"  href="index.html" role="button" style="font-size: 150% ;"> INICIO📖  </a> 
   </ul>
   <ul class="navbar-nav">
     <a class="nav-link"  href="https://aeon-merx.github.io/AEON-MERX/" role="button" style="font-size: 150% ;">  SALIR📖  </a> 
@@ -124,7 +124,7 @@
 </a>
 <ul class="nav nav-treeview">
 <li class="nav-item">
-<a href="pages/charts/chartjs.html" class="nav-link">
+<a href="./html.html" class="nav-link">
 <p class="pa">💻 HTML</p>
 </a>
 </li>
@@ -140,12 +140,12 @@
   </a>
   <ul class="nav nav-treeview">
   <li class="nav-item">
-  <a href="pages/charts/chartjs.html" class="nav-link">
+  <a href="./macroeconomia.html" class="nav-link">
   <p class="pa">🏦 MACROECONOMÍA</p>
   </a>
   </li>
   <li class="nav-item">
-    <a href="pages/charts/chartjs.html" class="nav-link">
+    <a href="./microeconomia.html" class="nav-link">
     <p class="pa">💳 MICROECONOMÍA</p>
     </a>
     </li>
