--- a/lenguasclasicas.html
+++ b/lenguasclasicas.html
@@ -257,7 +257,7 @@
   <h1>⚂ 💻 SOFTWARE</h1>
     <section class="latinmodulo">
     <div class="container>
-  <h1 id="CABEZERA">MODULO DE APRENDIZAJE DE LATIN CLÁSICO</h1>           
+  <h1 style="width:100%; text-align: center;">MODULO DE APRENDIZAJE DE LATIN CLÁSICO</h1>           
    <br>
   <div class="container-fluid">
  <label >FRASES FAMOSAS EN LATÍN</label>
