--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 <h1 style="text-align: center;"> CONTENIDO</h1>
 <img src="condor.png"  class="condor">
  <section id= popups>
- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+ <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal">
   Launch demo modal
 </button>
 
@@ -267,8 +267,8 @@
         ...
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary ">Save changes</button>
       </div>
     </div>
   </div>
