--- a/index.html
+++ b/index.html
@@ -252,19 +252,120 @@
  <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal">
   Launch demo modal
 </button>
+  <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal2">
+  Launch demo modal
+</button>
+    <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal3">
+  Launch demo modal
+</button>
+    <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal4">
+  Launch demo modal
+</button>
+    <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal5">
+  Launch demo modal
+</button>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+        <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-        ...
+        En el menu de la izquierda encontrarás todos los cursos disponibles.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary ">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+  
+<!-- Modal 2 -->
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Si tienes muchas dudas escríbenos y te ayudaremos enseguida , sigue el siguiente enlace.
+       https://api.whatsapp.com/send?phone=573016868066
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary ">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+ </section>
+ <!-- Modal 3-->
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      La plataforma esta dividida en cuatro secciones: <br>
+1. EBOOKS <br>
+       2. VIDEOS <br>
+       3. AUDIOS <br>
+       4. SOFTWARE <br>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary ">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+ </section>
+ <!-- Modal 4 -->
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        En el menu de la izquierda encontrarás todos los cursos disponibles.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary ">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+ </section>
+ <!-- Modal 5 -->
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        En el menu de la izquierda encontrarás todos los cursos disponibles.
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
