--- a/index.html
+++ b/index.html
@@ -250,19 +250,19 @@
 <img src="condor.png"  class="condor">
  <section id= popups>
  <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal">
-  Launch demo modal
+Bienvenida a AEON MERX 
 </button>
   <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal2">
-  Launch demo modal
+  Solucionar dudas
 </button>
     <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal3">
-  Launch demo modal
+  Partes de la plataforma y como sacar el máximo provecho
 </button>
     <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal4">
-  Launch demo modal
+  Vende nuestros cursos
 </button>
     <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal5">
-  Launch demo modal
+  Agendar Cita Presencial
 </button>
 
 <!-- Modal -->
@@ -298,7 +298,7 @@
       </div>
       <div class="modal-body">
         Si tienes muchas dudas escríbenos y te ayudaremos enseguida , sigue el siguiente enlace.
-       https://api.whatsapp.com/send?phone=573016868066
+       <a href="https://api.whatsapp.com/send?phone=573016868066"> SOLUCIONAR TUS DUDAS </a>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
@@ -309,7 +309,7 @@
 </div>
  </section>
  <!-- Modal 3-->
-<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -321,20 +321,21 @@
       <div class="modal-body">
       La plataforma esta dividida en cuatro secciones: <br>
 1. EBOOKS <br>
+       Donde hallarás varios libros de tu cursos disponibles.
        2. VIDEOS <br>
+       COntenido complementario, videos cortos que aumentarán la velocidad de aprendizaje.
        3. AUDIOS <br>
        4. SOFTWARE <br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary ">Save changes</button>
       </div>
     </div>
   </div>
 </div>
  </section>
  <!-- Modal 4 -->
-<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -344,10 +345,10 @@
         </button>
       </div>
       <div class="modal-body">
-        En el menu de la izquierda encontrarás todos los cursos disponibles.
+       Vende nuestros cursos y genera dinero por internet en todos los canales de venta.
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Activa tu sucripción VIP</button>
         <button type="button" class="btn btn-primary ">Save changes</button>
       </div>
     </div>
@@ -355,7 +356,7 @@
 </div>
  </section>
  <!-- Modal 5 -->
-<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -365,11 +366,12 @@
         </button>
       </div>
       <div class="modal-body">
-        En el menu de la izquierda encontrarás todos los cursos disponibles.
+    ¿Necesitas clases presenciales?
+       Agenda tu cita 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary ">Save changes</button>
+        <button type="button" class="btn btn-primary ">Agendar Cita Presencial</button>
       </div>
     </div>
   </div>
