--- a/index.html
+++ b/index.html
@@ -249,19 +249,19 @@
 <h1 style="text-align: center;"> CONTENIDO</h1>
 <img src="condor.png"  class="condor">
  <section id= popups>
- <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal">
+ <button type="button" class="btn btn-success form-control" data-toggle="modal" data-target="#exampleModal">
 Bienvenida a AEON MERX 
 </button>
-  <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal2">
+  <button type="button" class="btn btn-success form-control" data-toggle="modal" data-target="#exampleModal2">
   Solucionar dudas
 </button>
-    <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal3">
+    <button type="button" class="btn btn-success form-control" data-toggle="modal" data-target="#exampleModal3">
   Partes de la plataforma y como sacar el máximo provecho
 </button>
-    <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal4">
+    <button type="button" class="btn btn-success form-control" data-toggle="modal" data-target="#exampleModal4">
   Vende nuestros cursos
 </button>
-    <button type="button" class="btn btn-primary form-control" data-toggle="modal" data-target="#exampleModal5">
+    <button type="button" class="btn btn-success form-control" data-toggle="modal" data-target="#exampleModal5">
   Agendar Cita Presencial
 </button>
 
