--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@ Bienvenida a AEON MERX
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
@@ -314,18 +314,18 @@ Bienvenida a AEON MERX
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
       La plataforma esta dividida en cuatro secciones: <br>
-1. EBOOKS <br>
+1. EBOOKS 
        Donde hallarás varios libros de tu cursos disponibles.
-       2. VIDEOS <br>
+       2. VIDEOS 
        COntenido complementario, videos cortos que aumentarán la velocidad de aprendizaje.
-       3. AUDIOS <br>
-       4. SOFTWARE <br>
+       3. AUDIOS 
+       4. SOFTWARE 
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
