--- a/index.html
+++ b/index.html
@@ -276,11 +276,10 @@ Bienvenida a AEON MERX
         </button>
       </div>
       <div class="modal-body">
-        En el menu de la izquierda encontrarás todos los cursos disponibles.
+        En el menu de la izquierda encontrarás todos los cursos disponibles
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary ">Save changes</button>
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Cerrar</button>
       </div>
     </div>
   </div>
@@ -291,7 +290,7 @@ Bienvenida a AEON MERX
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
+        <h5 class="modal-title" id="exampleModalLabel2">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
           <span aria-hidden="true">&times;</span>
         </button>
