--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ Bienvenida a AEON MERX
 </div>
   
 <!-- Modal 2 -->
-<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel2" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -300,45 +300,46 @@ Bienvenida a AEON MERX
        <a href="https://api.whatsapp.com/send?phone=573016868066"> SOLUCIONAR TUS DUDAS </a>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary ">Save changes</button>
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Cerrar</button>
       </div>
     </div>
   </div>
 </div>
  </section>
  <!-- Modal 3-->
-<div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal3" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel3" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
+        <h5 class="modal-title" id="exampleModalLabel3">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Cerrar">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
-      La plataforma esta dividida en cuatro secciones: <br>
+       <p>
+      La plataforma esta dividida en cuatro secciones: 
 1. EBOOKS 
        Donde hallarás varios libros de tu cursos disponibles.
        2. VIDEOS 
        COntenido complementario, videos cortos que aumentarán la velocidad de aprendizaje.
        3. AUDIOS 
        4. SOFTWARE 
+       </p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Cerrar</button>
       </div>
     </div>
   </div>
 </div>
  </section>
  <!-- Modal 4 -->
-<div class="modal fade" id="exampleModal4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal4" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel4" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
+        <h5 class="modal-title" id="exampleModalLabel4">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -355,21 +356,23 @@ Bienvenida a AEON MERX
 </div>
  </section>
  <!-- Modal 5 -->
-<div class="modal fade" id="exampleModal5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade" id="exampleModal5" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel5" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
+        <h5 class="modal-title" id="exampleModalLabel5">BIENVENIDOS A ESTA GRAN AVENTURA</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
+       <p>
     ¿Necesitas clases presenciales?
+       </p>
        Agenda tu cita 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary " data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Cerar</button>
         <button type="button" class="btn btn-primary ">Agendar Cita Presencial</button>
       </div>
     </div>
