--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ Bienvenida a AEON MERX
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary " data-dismiss="modal">Activa tu sucripción VIP</button>
-        <button type="button" class="btn btn-primary ">Save changes</button>
+        <button type="button" class="btn btn-primary ">Cerrar</button>
       </div>
     </div>
   </div>
@@ -369,7 +369,7 @@ Bienvenida a AEON MERX
        Agenda tu cita 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary " data-dismiss="modal">Cerar</button>
+        <button type="button" class="btn btn-secondary " data-dismiss="modal">Cerrar</button>
         <button type="button" class="btn btn-primary ">Agendar Cita Presencial</button>
       </div>
     </div>
