--- a/index.html
+++ b/index.html
@@ -45,7 +45,12 @@
   0%   { 
  right:0px; top:0%; opacity: 1;
  }
-
+ 25%  {
+ left:80%; top:0%;  opacity: 1;
+ }
+  50%  { 
+ left:50%; top:30%;  opacity: 1;
+ }
   
  90% {
   left:5%; bottom:1%;  opacity: 1;
