--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
            top : 0px;
        opacity: 0;
   animation-name: condor;
-  animation-duration: 5s;
+  animation-duration: 4s;
 }
 @keyframes condor {
   0%   { 
@@ -47,6 +47,9 @@
  }
  25%  {
  left:80%; top:30%;  opacity: 1;
+ }
+  50%  { 
+ left:50%; top:30%;  opacity: 1;
  }
   
  90% {
