--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@ Bienvenida a AEON MERX
 </div>
  </section>
 </div>
-
+<div class="alert alert-success" role="alert">VIVAMOS JUNTOS DE LA INTERNET EDUCANDO NUESTRA MENTE COMO LA DE LOS DEMÁS</div>
 
 <footer class="main-footer" style="text-align: center !important;">
 <strong >Copyright &copy; 2022 <a href="https://aeon-merx.github.io/AEON-MERX/">☯AEON MERX</a>.</strong>
