--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@ Bienvenida a AEON MERX
     <button type="button" class="btn btn-success form-control" data-toggle="modal" data-target="#exampleModal5">
   Agendar Cita Presencial
 </button>
+  <div class="alert alert-dark" role="alert">VIVAMOS JUNTOS DE LA INTERNET EDUCANDO NUESTRA MENTE COMO LA DE LOS DEMÁS</div>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -373,7 +374,7 @@ Bienvenida a AEON MERX
 </div>
  </section>
 </div>
-<div class="alert alert-success" role="alert">VIVAMOS JUNTOS DE LA INTERNET EDUCANDO NUESTRA MENTE COMO LA DE LOS DEMÁS</div>
+
 
 <footer class="main-footer" style="text-align: center !important;">
 <strong >Copyright &copy; 2022 <a href="https://aeon-merx.github.io/AEON-MERX/">☯AEON MERX</a>.</strong>
