--- a/index.html
+++ b/index.html
@@ -260,7 +260,9 @@ Bienvenida a AEON MERX
     <button type="button" class="btn btn-success form-control" data-toggle="modal" data-target="#exampleModal5">
   Agendar Cita Presencial
 </button>
-  <div class="alert alert-dark" role="alert">VIVAMOS JUNTOS DE LA INTERNET EDUCANDO NUESTRA MENTE COMO LA DE LOS DEMÁS</div>
+  <div class="alert alert-dark" role="alert" style="text-align:center;">VIVAMOS JUNTOS DE LA INTERNET EDUCANDO NUESTRA MENTE COMO LA DE LOS DEMÁS</div>
+   <div class="alert alert-dark" role="alert" style="text-align:center;">LUCHEMOS POR NUESTROS SUEÑOS</div>
+   <div class="alert alert-dark" role="alert" style="text-align:center;">PUEDES SER QUIÉN QUIERÁS TRANSFORMANDO VIDAS </div>
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
