--- a/index.html
+++ b/index.html
@@ -263,7 +263,8 @@ Bienvenida a AEON MERX
   <div class="alert alert-dark" role="alert" style="text-align:center;">VIVAMOS JUNTOS DE LA INTERNET EDUCANDO NUESTRA MENTE COMO LA DE LOS DEMÁS</div>
    <div class="alert alert-dark" role="alert" style="text-align:center;">LUCHEMOS POR NUESTROS SUEÑOS</div>
    <div class="alert alert-dark" role="alert" style="text-align:center;">PUEDES SER QUIÉN QUIERÁS TRANSFORMANDO VIDAS </div>
-  <div class="container" style="widht: 100%; background-color: white; height: 50px;">
+    <div class="alert alert-light" role="alert" style="text-align:center;"></div>
+  
 
 <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
